@@ -22,6 +22,8 @@ this repository contains the full copyright notices and license terms. -->
                 view_ids="ir.act_window_domain_view_list2"/>
             <label name="domain"/>
             <field name="domain" colspan="3" widget="pyson"/>
+            <label name="context_domain"/>
+            <field name="context_domain" colspan="3" widget="pyson"/>
             <label name="context"/>
             <field name="context" colspan="3" widget="pyson"/>
             <label name="order"/>
